--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,2 +1,17 @@
 <h1>Pages#dashboard</h1>
 <p>Find me in app/views/pages/dashboard.html.erb</p>
+
+<p style="color: green"><%= notice %></p>
+
+<h1>Documents</h1>
+
+<div id="documents">
+  <% @documents.each do |document| %>
+    <%= render document %>
+    <p>
+      <%= link_to "Show this document", document %>
+    </p>
+  <% end %>
+</div>
+
+<%= link_to "New document", new_document_path %>
