Integrate new document form in my_logs page

--- a/app/views/pages/my_logs.html.erb
+++ b/app/views/pages/my_logs.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#my_logs</h1>
 <p>Find me in app/views/pages/my_logs.html.erb</p>
+
+<h1>New document</h1>
+<%= render "documents/form", document: @document %>
