--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,17 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    
+
+    <% if current_user %>
+      Logged in as <%= current_user.email %> |
+      <%= link_to 'Dashboard', dashboard_path %> |
+      <%= link_to 'My Logs', my_logs_path %> |
+      <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Login', new_user_session_path %> |
+      <%= link_to 'Register', new_user_registration_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
