--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <p class="alert"><%= alert %></p>
 
     <% if current_user %>
-      Logged in as <%= current_user.email %> |
+      Logged in as <%= current_user.full_name %> |
       <%= link_to 'Dashboard', dashboard_path %> |
       <%= link_to 'My Logs', my_logs_path %> |
       <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
