--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,14 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if current_user %>
+    <% if current_user.is_a?(User) %>
       Logged in as <%= current_user.full_name %> |
+    <% end %>
       <%= link_to 'Dashboard', dashboard_path %> |
-      <%= link_to 'My Logs', my_logs_path %> |
+    <%= link_to 'My Logs', my_logs_path %> |
+    <%= link_to 'About', about_path %> |
+
+    <% if current_user.is_a?(User) %>
       <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to 'Login', new_user_session_path %> |
