--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
       Logged in as <%= current_user.full_name %> |
     <% end %>
       <%= link_to 'Dashboard', dashboard_path %> |
-    <%= link_to 'My Logs', my_logs_path %> |
+    <% if current_user.is_a?(User) %>
+      <%= link_to 'My Logs', my_logs_path %> |
+    <% end %>
     <%= link_to 'About', about_path %> |
 
     <% if current_user.is_a?(User) %>
